fixed modal spacing on margin bottom

--- a/public/css/style2.css
+++ b/public/css/style2.css
@@ -298,6 +298,10 @@ span.number {
   padding-top: 7px;
 }
 
+.add-cancel-buttons {
+  margin-bottom: 110px;
+}
+
 /* MODAL */
 
 .modal {
